[package]
name = "rustDB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
criterion = "0.5.1"
nom = "7.1.3"
serde = { version = "1.0.185", features = ["derive"] }
serde_with = "3.3.0"
actix-web = "4"
rustDB_derive = { path = "rustDB_derive" }

[[bench]]
name = "benchmarks"
harness = false
